[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1", default-features = false, features = ["macros"] }
common = { path = "../common" }

[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = [
  "gzip",
  "config_parsing",
  "yaml_format",
  "console_appender",
  "rolling_file_appender",
  "compound_policy",
  "size_trigger",
  "fixed_window_roller"
]